correction scrollbars firefox

--- a/app/styles/parts/_import-csv.scss
+++ b/app/styles/parts/_import-csv.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   position: relative;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   .select-a-map {
     .dropdown-trigger {
@@ -111,7 +111,7 @@
 
 .report-preview {
 
-  overflow-y: scroll;
+  overflow-y: auto;
   font-size: 0.8em;
 
   & table {
