--- a/app/styles/parts/_sidebars.scss
+++ b/app/styles/parts/_sidebars.scss
@@ -38,7 +38,7 @@
   padding: 0 1rem;
   flex: 1;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .application-sidebar-sub .sidebar-scroll-wrapper {
